# docker-registry-walk

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  renovate.json
.github/workflows/: ci.yml  release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-codebase-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-codebase-refactor/checklists/: requirements.md
specs/001-codebase-refactor/contracts/: tui-internal.md
src/: clipboard.rs  config.rs  main.rs
src/ops/: copy.rs  delete.rs  diff.rs  export.rs  inspect.rs  mod.rs  prune.rs  retag.rs
src/registry/: auth.rs  client.rs  error.rs  mod.rs  pagination.rs  search.rs  types.rs
src/tui/: app.rs  detail.rs  event.rs  mod.rs  ui.rs
