[package]
name = "docker-registry-walk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
keyring = "4.1.2"
ratatui = "0.30.2"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
rpassword = "7.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
url = "2.5.8"
